--- a/Documentation/power_estimation_methods.tex
+++ b/Documentation/power_estimation_methods.tex
@@ -983,7 +983,7 @@ Parameter assumptions
 \begin{align}
 K &= \left(\frac{MT_{df}}{MDES}\right)^2 \left( \text{ICC}_{3,m} \omega_3  +  \frac{\text{ICC}_{2,m} (1-R_{2,m}^2)}{\bar{T}(1 - \bar{T}) J} + \frac{(1-\text{ICC}_{2,m}-\text{ICC}_{3,m})(1-R^2_{1,m})}{\bar{T}(1 - \bar{T}) J \bar{n}} \right)\\
 J &=  \frac{\bar{n}\text{ICC}_{2,m} (1-R_{2,m}^2) + (1-\text{ICC}_{2,m}-\text{ICC}_{3,m})(1-R^2_{1,m})}{\bar{T}(1 - \bar{T})\left(\bar{n} K \left(\frac{MT_{df}}{MDES}\right)^{-2} - \bar{n} \text{ICC}_{3,m} \omega_3\right)}\\
-\bar{n} &= \frac{(1-\text{ICC}_{2,m}-\text{ICC}_{3,m})(1-R^2_{1,m})}{\bar{T}(1 - \bar{T})J K \left(\frac{MT_{df}}{MDES}\right)^{-2}  \text{ICC}_{3,m}\omega_{3,m} -  \text{ICC}_{2,m} (1-R_{2,m}^2)}
+\bar{n} &= \frac{(1-\text{ICC}_{2,m}-\text{ICC}_{3,m})(1-R^2_{1,m})}{\bar{T}(1 - \bar{T})J \left(K \left(\frac{MT_{df}}{MDES}\right)^{-2} -  \text{ICC}_{3,m}\omega_{3,m}\right) -  \text{ICC}_{2,m} (1-R_{2,m}^2)}
 \end{align}
 
 \paragraph{Code syntax.}
