--- a/PowerGridTesting.Rmd
+++ b/PowerGridTesting.Rmd
@@ -1,9 +1,16 @@
 ---
 title: "PowerGridTesting"
-author: "Zarni"
-date: "8/4/2021"
+author: "PUMP Team"
+date: "8/31/2021"
 output: html_document
 ---
+
+Questions -
+
+1) Even if they are not varying, can we have MDES and R2.1 or the parameter of interest we are varying to be in the data frame?
+
+2) I am assuming the grid function does not work include varying designs? test_results_02 and test_results_04 appear to have the same number of varying observations.
+- KP: Do the estimates vary due to sampling error differences?
 
 ```{r}
 test_results_01 <- 
@@ -33,9 +40,11 @@ pum::pump_power_grid(design = c("d2.1_m2fr"),
 View(test_results_01)
 ```
 
+
 ```{r}
+# The way the code is working is that we are doing multiples of MDES and R2 
 test_results_02 <- 
-pum::pump_power_grid(design = c("d2.1_m2fr", "d2.1_m2ff"),
+pum::pump_power_grid(design = c("d2.1_m2fr"),
                      MTP = c("Holm", "BH") ,
                      MDES = c(0.125, 0.1, 0.2, 0.15, 0.175),
                      M = 5 ,
@@ -58,10 +67,16 @@ pum::pump_power_grid(design = c("d2.1_m2fr", "d2.1_m2ff"),
 ```
 
 ```{r}
+View(test_results_02)
+```
+
+
+
+```{r}
 test_results_03 <- 
 pum::pump_power_grid(design = c("d2.1_m2fr"),
-                     MTP = c("Holm", "BH") ,
-                     MDES = c(0.125),
+                     MTP = c("Holm") ,
+                     MDES = c(0.125, 0.2),
                      M = 5 ,
                      J = 20,
                      K = 1,
@@ -71,7 +86,7 @@ pum::pump_power_grid(design = c("d2.1_m2fr"),
                      numCovar.1 = 0,
                      numCovar.2 = 0,
                      numCovar.3 = 0,
-                     R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
+                     R2.1 = c(0.2, 0.3),
                      R2.2 = NULL,
                      R2.3 = NULL,
                      ICC.2 =0,
@@ -87,7 +102,7 @@ View(test_results_03)
 
 ```{r}
 test_results_04 <- 
-pum::pump_power_grid(design = c("d2.1_m2fr"),
+pum::pump_power_grid(design = c("d2.1_m2fr", "d2.1_m2ff"),
                      MTP = c("Holm", "BH") ,
                      MDES = c(0.125, 0.12, 0.1, 0.23, 0.12),
                      M = 5 ,
@@ -108,7 +123,35 @@ pum::pump_power_grid(design = c("d2.1_m2fr"),
                      omega.2 = NULL,
                      omega.3 = NULL)
 ```
+
+
 ```{r}
 View(test_results_04)
 ```
 
+```{r}
+# pump_power_grid(design = input$designP2LBIE,
+#                            MTP = as.character(unlist(strsplit(input$MTPP2LBIE," "))),
+#                            MDES = as.numeric(unlist(strsplit(input$MDESP2LBIE, ","))),
+#                            M = input$MP2LBIE, # The number of hypotheses/outcomes
+#                            J = input$JP2LBIE, # The number of schools
+#                            K = input$KP2LBIE, # The number of districts
+#                            nbar = input$nbarP2LBIE, # The number of units per block
+#                            Tbar = input$tbarP2LBIE, # The proportion of samples that are assigned to the treatment
+#                            alpha = input$alphaP2LBIE,
+#                            numCovar.1 = input$numCovar.1P2LBIE,
+#                            numCovar.2 = 0,
+#                            numCovar.3 = 0,
+#                            R2.1 = as.numeric(unlist(strsplit(input$R2.1P2LBIE, ","))),
+#                            R2.2 = rep(0.1, input$MP2LBIE),
+#                            R2.3 = rep(0.1, input$MP2LBIE),
+#                            ICC.2 = rep(0, input$MP2LBIE),
+#                            ICC.3 = rep(0.2, input$MP2LBIE) ,
+#                            rho = input$rhoP2LBIE,
+#                            omega.2 = NULL,
+#                            omega.3 = NULL,
+#                            tnum = 10000, 
+#                            B = 100, 
+#                            cl = NULL,
+#                            updateProgress = updateProgress
+```
