--- a/PowerGridTesting.Rmd
+++ b/PowerGridTesting.Rmd
@@ -5,6 +5,12 @@ date: "8/31/2021"
 output: html_document
 ---
 
+
+```{r}
+library(pum)
+```
+
+
 Questions -
 
 1) Even if they are not varying, can we have MDES and R2.1 or the parameter of interest we are varying to be in the data frame?
@@ -16,10 +22,11 @@ Questions -
 test_results_01 <- 
 pum::pump_power_grid(design = c("d2.1_m2fr"),
                      MTP = c("Holm", "BH") ,
-                     MDES = c(0.125, 0.125, 0.125, 0.125, 0.125),
+                     MDES = c(0.125),
                      M = 5 ,
                      J = 20,
                      K = 1,
+                     
                      nbar = 100,
                      Tbar = 0.5 ,
                      alpha = 0.05,
@@ -33,12 +40,44 @@ pum::pump_power_grid(design = c("d2.1_m2fr"),
                      ICC.3 = NULL,
                      rho = 0.5,
                      omega.2 = NULL,
-                     omega.3 = NULL)
+                     omega.3 = NULL,
+                     long.table = TRUE)
 ```
 
 ```{r}
 View(test_results_01)
 ```
+
+```{r}
+test_results_01_non_grid <- 
+pum::pump_power(design = c("d2.1_m2fr"),
+                     MTP = c("Holm", "BH") ,
+                     MDES = c(0.125, 0.125, 0.125, 0.125, 0.125),
+                     M = 5 ,
+                     J = 20,
+                     K = 1,
+                     nbar = 100,
+                     Tbar = 0.5 ,
+                     alpha = 0.05,
+                     numCovar.1 = 0,
+                     numCovar.2 = 0,
+                     numCovar.3 = 0,
+                     R2.1 = c(0.2, 0.2, 0.2, 0.2, 0.2),
+                     R2.2 = c(0.1, 0.1, 0.1, 0.1, 0.1),
+                     R2.3 = c(0,0,0,0,0),
+                     ICC.2 =c(0,0,0,0,0),
+                     ICC.3 = c(0,0,0,0,0),
+                     rho = 0.5,
+                     omega.2 = 0,
+                     omega.3 = 0.1,
+                     long.table = TRUE)
+```
+```{r}
+View(test_results_01_non_grid)
+```
+
+
+
 
 
 ```{r}
